# image-merger

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
examples/: known_size_merger.rs
src/: cell.rs  core.rs  functions.rs  image.rs  lib.rs  main.rs  merger.rs
src/merger/: core.rs  fixed.rs  known.rs  mod.rs  resizable.rs  resize.rs
tests/: known_size_merging.rs  merging.rs  resized_merging.rs
