[package]
name = "image-merger"
version = "1.1.3"
edition = "2021"
license = "MIT"
description = "A tool to merge multiple images into one."
repository = "https://github.com/NextChai/image-merger"

[profile.release]
codegen-units = 1
lto = false

[dependencies]
image = "0.25.6"
rayon = "1.10.0"
num-traits = "0.2.19"
